--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -46,6 +46,16 @@
     </div>
 </div>
 
+<div class="container text-center pb-5">
+    <div class="_porque-anunciar">
+        <h2 class="mb-4">Porque buscar na Life?</h2>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, minus aliquam vero hic voluptate repudiandae
+            temporibus expedita nesciunt. Sunt sint cum doloremque atque! Nesciunt vitae dicta, quo magnam alias est!
+        </p>
+    </div>
+</div>
+
 <div class="container py-3">
     <div class="_filtro mb-5">
         <h2 class="text-center mb-5">Separamos essas ofertas para você!</h2>
