--- a/src/app/pages/imoveis/imoveis.component.html
+++ b/src/app/pages/imoveis/imoveis.component.html
@@ -1,3 +1,9 @@
+<div class="container pt-5 pb-3">
+    <div class="text-center _title mb-4">
+        <h2>O Imóvel ideal para você!</h2>
+    </div>
+</div>
+
 <div id="_imoveis-list" class="py-5">
     <div class="container">
         <div class="row">
