--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -44,11 +44,37 @@ header {
     text-decoration: underline;
 }
 
+._menu ._button-menu {
+    display: none;
+}
+
 @media only screen and (max-width: 800px) {
     header .p-3 {
         padding-bottom: 0 !important;
     }
     ._logo {
         width: 50px;
+    }
+    ._menu ._button-menu {
+        content: '';
+        display: block;
+        width: 100%;
+        height: 30px;
+        mask: url(/assets/img/menu.svg) no-repeat center / contain;
+        -webkit-mask: url(/assets/img/menu.svg) no-repeat center / contain;
+        background-color: var(--color-green);
+        border: 0
+    }
+    ._menu ul {
+        display: none;
+        margin-top: 30px;
+    }
+    ._menu ul li {
+        margin: 0;
+        margin-bottom: 20px;
+        text-align: center;
+    }
+    ._menu._active ul {
+        display: block;
     }
 }
