--- a/src/app/component/carousel/carousel.component.html
+++ b/src/app/component/carousel/carousel.component.html
@@ -1,12 +1,12 @@
 <ngx-slick-carousel class="carousel" #slickModal="slick-carousel" [config]="configSlide">
     <div ngxSlickItem *ngFor="let item of data">
         <ng-container *ngIf="fancybox==true">
-            <a [attr.data-fancybox]="'gallery'+id" href="{{item}}">
-                <img src="{{item}}" alt="{{title}}" title="{{title}}" class="img-fluid">
+            <a [attr.data-fancybox]="'gallery'+id" href="{{item.url}}">
+                <img src="{{item.url}}" alt="{{item.legend}}" title="{{item.legend}}" class="img-fluid">
             </a>
         </ng-container>
         <ng-container *ngIf="fancybox==false">
-            <img src="{{item}}" alt="{{title}}" title="{{title}}" class="img-fluid">
+            <img src="{{item.url}}" alt="{{item.legend}}" title="{{item.legend}}" class="img-fluid">
         </ng-container>
     </div>
 </ngx-slick-carousel>
