--- a/src/app/component/card-imovel/card-imovel.component.html
+++ b/src/app/component/card-imovel/card-imovel.component.html
@@ -1,40 +1,40 @@
 <div class="card">
     <div class="card-header p-0">
         <!-- limitar fotos para nao carregar todas  -->
-        <app-carousel [id]="item.id" [data]="item.images" [title]="item.titulo" [fancybox]="true" [viewphoto]="1">
+        <app-carousel [id]="item.id" [data]="item.photos" [fancybox]="true" [viewphoto]="1">
         </app-carousel>
     </div>
     <div class="card-body">
         <h2>
             <a [routerLink]="['/imovel/'+item.id]">
-                {{item.titulo}}
+                {{item.title}}
             </a>
         </h2>
         <div class="_icones">
             <div class="row text-center row-cols-4 row-cols-lg-3 justify-content-center align-items-center">
 
-                <ng-container *ngIf="item.areaconstruida!=''">
+                <ng-container *ngIf="item.info.meters.total!=''">
                     <div class="col">
                         <div class="_icon _areaconstruida"></div>
-                        <span>{{item.areaconstruida}} m²</span>
+                        <span>{{item.info.meters.total}} m²</span>
                     </div>
                 </ng-container>
-                <ng-container *ngIf="item.quartos!=''">
+                <ng-container *ngIf="item.info.floor!=''">
                     <div class="col">
                         <div class="_icon _quartos"></div>
-                        <span>{{item.quartos}} </span>
+                        <span>{{item.info.floor}} </span>
                     </div>
                 </ng-container>
 
-                <ng-container *ngIf="item.garagem!=''">
+                <ng-container *ngIf="item.info.garage!=''">
                     <div class="col">
                         <div class="_icon _garagem"></div>
-                        <span>{{item.garagem}} </span>
+                        <span>{{item.info.garage}} </span>
                     </div>
                 </ng-container>
             </div>
         </div>
-        <p *ngIf="item?.endereco" class="_endereco">{{item.endereco}}</p>
+        <p *ngIf="item?.address.district" class="_endereco">{{item.address.district}}</p>
 
     </div>
     <div class="card-footer pt-3">
