slide | card | imovel interna

--- a/src/app/component/card-imovel/card-imovel.component.html
+++ b/src/app/component/card-imovel/card-imovel.component.html
@@ -13,10 +13,10 @@
         <div class="_icones">
             <div class="row text-center row-cols-4 row-cols-lg-3 justify-content-center align-items-center">
 
-                <ng-container *ngIf="item.info.meters.total!=''">
+                <ng-container *ngIf="item.info.bathroom!=''">
                     <div class="col">
-                        <div class="_icon _areaconstruida"></div>
-                        <span>{{item.info.meters.total}} m²</span>
+                        <div class="_icon _banheiro"></div>
+                        <span>{{item.info.bathroom}}</span>
                     </div>
                 </ng-container>
                 <ng-container *ngIf="item.info.floor!=''">
