ajuste header e scroll to up

--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,3 +1,8 @@
+
+<div class="_move-to-up" (click)="scrollToTop()">
+    <span></span>
+</div>
+
 <footer class=" mt-5 py-5 " style="background-color: #f5f5f5;">
     <div class="container">
         <h2 class="text-center mb-5">Imóveis Life</h2>
