--- a/src/app/component/header/header.component.css
+++ b/src/app/component/header/header.component.css
@@ -1,10 +1,12 @@
 header {
     background-color: var(--color-green);
-    position: sticky;
+    /* position: sticky;
     position: -webkit-sticky;
-    top: 0;
+    top: 0; */
+    position: relative;
     z-index: 500;
 }
+/* ALTEREI O MENU PARA NAO FICAR FIXO */
 
 ._logo {
     margin: 0 auto;
