--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -12,7 +12,7 @@
 
     <div class="container-fluid py-2 px-0">
         <div class="_menu" style="background-color: #f5f5f5;">
-            <button class="_button-menu" (click)="openForm()"></button>
+            <button class="_button-menu" title="Abrir menu" aria-label="Abrir menu" (click)="openForm()"></button>
             <ul>
                 <li (click)="openForm()"><a routerLink="/">home</a></li>
                 <li (click)="openForm()"><a routerLink="imoveis">Imóveis</a></li>
