--- a/src/app/pages/imoveis/imoveis.component.html
+++ b/src/app/pages/imoveis/imoveis.component.html
@@ -1,111 +1,227 @@
 <div class="container pt-5 pb-3">
-    <div class="text-center _title mb-4">
-        <h2>O Imóvel ideal para você!</h2>
-    </div>
+  <div class="text-center _title mb-4">
+    <h2>O Imóvel ideal para você!</h2>
+  </div>
 </div>
 
 <div id="_imoveis-list" class="py-5">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-3">
-                <div class="_filter pt-3">
-                    <button (click)="openForm()" class="_close">x</button>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3">
+        <div class="_filter pt-3">
+          <button (click)="openForm()" class="_close">x</button>
 
-                    <small>Filtrar</small>
-                    <div class="accordion accordion-flush" id="accordionFlushExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingOne">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
-                                    aria-controls="flush-collapseOne">
-                                    Garagem
-                                </button>
-                            </h2>
-                            <div id="flush-collapseOne" class="accordion-collapse collapse"
-                                aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">
-                                    1 <br>
-                                    2 <br>
-                                    3 <br>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
-                                    aria-controls="flush-collapseTwo">
-                                    Quartos
-                                </button>
-                            </h2>
-                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
-                                aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">
-                                    1 <br>
-                                    2 <br>
-                                    3 <br>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="flush-headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
-                                    aria-controls="flush-collapseThree">
-                                    Accordion Item #3
-                                </button>
-                            </h2>
-                            <div id="flush-collapseThree" class="accordion-collapse collapse"
-                                aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-                                <div class="accordion-body">Placeholder content for this accordion, which is intended to
-                                    demonstrate the <code>.accordion-flush</code> class. This is the third item's
-                                    accordion body. Nothing more exciting happening here in terms of content, but just
-                                    filling up the space to make it look, at least at first glance, a bit more
-                                    representative of how this would look in a real-world application.</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="btn btn-primary  _open-filter" (click)="openForm()">
-                    filtrar
+          <small>Filtrar</small>
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingOne">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  Garagem
                 </button>
-            </div>
-            <div class="col-md-9">
-                <div class="row mb-3">
-                    <div class="col-md-4">
-                        <div class="_controls-list py-3">
-                            <p>
-                                <small class="muted">Visualização: </small>
-                                <button (click)="changeViewList=3" class="m-2 _grade">grade</button>
-                                <button (click)="changeViewList=1" class="_list">lista</button>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <small class="muted">busca rápida: </small>
-
-                        <input type="text" class="form-control  _busca-rapida"
-                            placeholder="Salas Comerciais, Casas, Apartamentos, Terrenos..." id="myInput"
-                            (keyup)="myFunction()">
-                    </div>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingOne"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  1 <br />
+                  2 <br />
+                  3 <br />
                 </div>
-
-                <div class="_list-imoveis mb-4">
-                    <ul class="row row-cols-1 row-cols-lg-{{changeViewList}}" id="myUL">
-                        <ng-container *ngFor="let item of imoveis">
-                            <li class="col pb-3">
-                                
-                                <label>
-                                    <ng-container>{{item.type}} {{item.mode}}</ng-container>
-                                </label>
-
-                                <app-card-imovel [item]="item"></app-card-imovel>
-
-                            </li>
-                        </ng-container>
-                    </ul>
-                </div>
+              </div>
             </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingTwo">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseTwo"
+                >
+                  Quartos
+                </button>
+              </h2>
+              <div
+                id="flush-collapseTwo"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingTwo"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  1 <br />
+                  2 <br />
+                  3 <br />
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header" id="flush-headingThree">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                  Accordion Item #3
+                </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                aria-labelledby="flush-headingThree"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the third item's accordion body. Nothing more exciting
+                  happening here in terms of content, but just filling up the
+                  space to make it look, at least at first glance, a bit more
+                  representative of how this would look in a real-world
+                  application.
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+        <button class="btn btn-primary _open-filter" (click)="openForm()">
+          filtrar
+        </button>
+      </div>
+      <div class="col-md-9">
+        <div class="row mb-3">
+          <div class="col-md-4">
+            <div class="_controls-list py-3">
+              <p>
+                <small class="muted">Visualização: </small>
+                <button (click)="changeViewList = 3" class="m-2 _grade">
+                  grade
+                </button>
+                <button (click)="changeViewList = 1" class="_list">
+                  lista
+                </button>
+              </p>
+            </div>
+          </div>
+          <div class="col-md-8">
+            <small class="muted">busca rápida: </small>
+
+            <input
+              type="text"
+              class="form-control _busca-rapida"
+              placeholder="Salas Comerciais, Casas, Apartamentos, Terrenos..."
+              id="myInput"
+              (keyup)="myFunction()"
+            />
+          </div>
+        </div>
+
+        <div class="_list-imoveis mb-4">
+          <ul class="row row-cols-1 row-cols-lg-{{ changeViewList }}" id="myUL">
+            <ng-container *ngIf="!imoveis">
+              <div
+                class="alert alert-success d-block w-100 text-center"
+                role="alert"
+              >
+                <p class="m-0 fs-3">
+                  <strong>Espere só um pouquinho</strong><br />Imóveis incriveis
+                  pra você!
+                </p>
+
+                <div class="spinner-grow mx-auto" role="status">
+                  <span class="sr-only"></span>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" aria-hidden="true">
+                  <div class="card-body">
+                    <h5 class="card-title placeholder-glow">
+                      <span class="placeholder col-6"></span>
+                    </h5>
+                    <p class="card-text placeholder-glow">
+                      <span class="placeholder col-7"></span>
+                      <span class="placeholder col-4"></span>
+                      <span class="placeholder col-4"></span>
+                      <span class="placeholder col-6"></span>
+                      <span class="placeholder col-8"></span>
+                    </p>
+                    <a
+                      href="#"
+                      tabindex="-1"
+                      class="btn btn-primary disabled placeholder col-6"
+                    ></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" aria-hidden="true">
+                  <div class="card-body">
+                    <h5 class="card-title placeholder-glow">
+                      <span class="placeholder col-6"></span>
+                    </h5>
+                    <p class="card-text placeholder-glow">
+                      <span class="placeholder col-7"></span>
+                      <span class="placeholder col-4"></span>
+                      <span class="placeholder col-4"></span>
+                      <span class="placeholder col-6"></span>
+                      <span class="placeholder col-8"></span>
+                    </p>
+                    <a
+                      href="#"
+                      tabindex="-1"
+                      class="btn btn-primary disabled placeholder col-6"
+                    ></a>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card" aria-hidden="true">
+                  <div class="card-body">
+                    <h5 class="card-title placeholder-glow">
+                      <span class="placeholder col-6"></span>
+                    </h5>
+                    <p class="card-text placeholder-glow">
+                      <span class="placeholder col-7"></span>
+                      <span class="placeholder col-4"></span>
+                      <span class="placeholder col-4"></span>
+                      <span class="placeholder col-6"></span>
+                      <span class="placeholder col-8"></span>
+                    </p>
+                    <a
+                      href="#"
+                      tabindex="-1"
+                      class="btn btn-primary disabled placeholder col-6"
+                    ></a>
+                  </div>
+                </div>
+              </div>
+            </ng-container>
+
+            <ng-container *ngFor="let item of imoveis">
+              <li class="col pb-3">
+                <label>
+                  <ng-container>{{ item.type }} {{ item.mode }}</ng-container>
+                </label>
+
+                <app-card-imovel [item]="item"></app-card-imovel>
+              </li>
+            </ng-container>
+          </ul>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
